Add chat functionality

--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -245,10 +245,11 @@
   height: 100%;
 }
 
-:where(.MarkpromptPromptView) {
+:where(.MarkpromptChatView) {
   display: grid;
-  grid-template-rows: 1fr auto;
+  grid-template-rows: 1fr;
   height: 100%;
+  position: relative;
 }
 
 :where(.MarkpromptClose) {
@@ -292,6 +293,53 @@
   gap: 0.75rem;
 }
 
+:where(.MarkpromptChatViewForm) {
+  position: absolute;
+  bottom: 0.75rem;
+  left: 1.25rem;
+  right: 1.25rem;
+  border: 1px solid var(--markprompt-border);
+  background-color: var(--markprompt-background);
+  border-radius: 0.5rem;
+  box-shadow:
+    hsl(206deg 22% 7% / 35%) 0 10px 40px -10px,
+    hsl(206deg 22% 7% / 20%) 0 10px 20px -15px;
+}
+
+:where(.MarkpromptMessageAnswerContainer) {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: first baseline;
+  max-width: 100%;
+  padding-right: 0.75rem;
+}
+
+:where(.MarkpromptMessageAnswer) {
+  overflow: hidden;
+}
+
+:where(.MarkpromptMessageAnswer .MarkpromptAnswer) {
+  padding-right: 0.75rem;
+}
+
+:where(.MarkpromptRegenerateButton) {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+  flex-wrap: nowrap;
+  padding: 0.5rem;
+  border-radius: 4px;
+  border: 1px solid var(--markprompt-border);
+  background-color: var(--markprompt-muted);
+  color: var(--markprompt-mutedForeground);
+  cursor: pointer;
+  white-space: nowrap;
+  transform: translateY(-100%);
+  top: -0.5rem;
+  right: 0.25rem;
+}
+
 :where(.MarkpromptPromptLabel) {
   cursor: pointer;
   display: flex;
@@ -300,6 +348,17 @@
   border-width: 1px;
   border-style: solid;
   border-color: transparent;
+}
+
+:where(.MarkpromptMessagePrompt) {
+  padding-inline: 1.25rem;
+  background-color: var(--markprompt-muted);
+  border-top: 1px solid var(--markprompt-border);
+  border-bottom: 1px solid var(--markprompt-border);
+}
+
+:where(.MarkpromptMessagePrompt:first-of-type) {
+  border-top-color: transparent;
 }
 
 :where(.MarkpromptPrimaryIcon) {
@@ -375,6 +434,14 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+}
+
+:where(.MarkpromptMessages) {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  /* allow the answer container in the chat view to scroll past the floating input */
+  padding-bottom: 4rem;
 }
 
 :where(.MarkpromptAutoScroller) {
@@ -797,6 +864,10 @@
   padding-right: 0;
 }
 
+:where(.MarkpromptMessageAnswer .MarkpromptAnswer) {
+  padding-right: 0.75rem;
+}
+
 :where(.MarkpromptCaret) {
   display: none;
   height: 1em;
@@ -818,13 +889,17 @@
   display: inline-block;
 }
 
-:where(.MarkpromptPromptFeedback) {
+:where(.MarkpromptPromptFeedback[data-variant='text']) {
   margin: 0 2rem 1rem;
   padding: 0.75rem 0;
   border-top: 1px solid var(--markprompt-border);
 }
 
-:where(.MarkpromptPromptFeedback h3) {
+:where(.MarkpromptPromptFeedback[data-variant='icons']) {
+  padding: 0.75rem 0;
+}
+
+:where(.MarkpromptPromptFeedback[data-variant='text'] h3) {
   animation: markprompt-fade-in 500ms ease-out forwards 1;
   font-size: var(--markprompt-text-size-xs);
   font-weight: 600;
@@ -833,15 +908,23 @@
   margin-bottom: 0.5rem;
 }
 
-:where(.MarkpromptPromptFeedback p) {
-  font-size: var(--markprompt-text-size);
-  margin-top: 0;
-  margin-bottom: 0.5rem;
+:where(.MarkpromptPromptFeedback[data-variant='icons'] h3) {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
 }
 
 :where(.MarkpromptPromptFeedback div) {
   display: flex;
   gap: 0.5rem;
+}
+
+:where(.MarkpromptPromptFeedback[data-variant='icons'] div) {
+  flex-direction: column;
 }
 
 :where(.MarkpromptPromptFeedback button) {
@@ -916,6 +999,14 @@
   transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
+:where(.MarkpromptReferences[data-loading-state='cancelled']) {
+  display: none;
+}
+
+:where(.MarkpromptChatView .MarkpromptReferences) {
+  background-color: unset;
+}
+
 :where(.MarkpromptReferences[data-loading-state='preload']) {
   overflow-x: hidden;
 }
@@ -945,6 +1036,10 @@
   scrollbar-width: none;
   -ms-overflow-style: none;
   background-color: var(--markprompt-muted);
+}
+
+:where(.MarkpromptChatView .MarkpromptReferences ul) {
+  background-color: unset;
 }
 
 .MarkpromptReferences ul::-webkit-scrollbar {
@@ -1005,6 +1100,19 @@
 
 :where(.MarkpromptReference a:hover) {
   opacity: 0.8;
+}
+
+:where(.MarkpromptCancelled) {
+  padding-inline: 1rem;
+}
+
+:where(.MarkpromptCancelledText) {
+  background-color: var(--markprompt-muted);
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  font-size: 0.875rem;
+  color: var(--markprompt-mutedForeground);
+  text-wrap: balance;
 }
 
 :where(.MarkpromptBackButton) {
