--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -293,7 +293,11 @@
   gap: 0.75rem;
 }
 
-:where(.MarkpromptChatViewForm) {
+:where(.MarkpromptPromptView .MarkpromptForm) {
+  margin-bottom: 1rem;
+}
+
+:where(.MarkpromptChatView .MarkpromptForm) {
   position: absolute;
   bottom: 0.75rem;
   left: 1.25rem;
@@ -353,6 +357,7 @@
   border-bottom: 1px solid var(--markprompt-border);
   position: relative;
   overflow: hidden;
+  margin-bottom: 1rem;
 }
 
 :where(.MarkpromptMessagePrompt:first-of-type) {
@@ -461,7 +466,7 @@
   font-size: 0.875rem;
   font-size: var(--markprompt-text-size);
   line-height: 1.7142857;
-  padding: 1rem 2rem;
+  padding: 0 2rem 1rem;
 }
 
 :where(.MarkpromptAnswer p) {
@@ -953,7 +958,7 @@
   opacity: 0.7;
 }
 
-:where([data-loading-state='preload'] .MarkpromptProgress) {
+:where(.MarkpromptProgress) {
   position: absolute;
   top: -1px;
   left: 0;
@@ -970,13 +975,11 @@
   transition-timing-function: cubic-bezier(0.14, 0, 0.16, 1);
   transition-property: opacity;
   transition-duration: 200ms;
-  opacity: 1;
+  opacity: 0;
 }
 
-:where(
-    [data-loading-state]:not([data-loading-state='preload']) .MarkpromptProgress
-  ) {
-  opacity: 0;
+:where([data-loading-state='preload'] .MarkpromptProgress) {
+  opacity: 1;
 }
 
 :where(.MarkpromptMessagePrompt .MarkpromptProgress) {
@@ -1005,6 +1008,8 @@
 
 :where(.MarkpromptChatView .MarkpromptReferences) {
   background-color: unset;
+  border-top: none;
+  padding-block: 0 1.5rem;
 }
 
 :where(.MarkpromptReferences[data-loading-state='preload']) {
