--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -299,15 +299,12 @@
 
 :where(.MarkpromptChatView .MarkpromptForm) {
   position: absolute;
-  bottom: 0.75rem;
-  left: 1.25rem;
-  right: 1.25rem;
-  border: 1px solid var(--markprompt-border);
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-top: 1px solid var(--markprompt-border);
+  border-bottom: 0;
   background-color: var(--markprompt-background);
-  border-radius: 0.5rem;
-  box-shadow:
-    hsl(206deg 22% 7% / 35%) 0 10px 40px -10px,
-    hsl(206deg 22% 7% / 20%) 0 10px 20px -15px;
 }
 
 :where(.MarkpromptMessageAnswerContainer) {
@@ -315,7 +312,7 @@
   grid-template-columns: 1fr auto;
   align-items: first baseline;
   max-width: 100%;
-  padding-right: 0.75rem;
+  padding-right: 1rem;
 }
 
 :where(.MarkpromptMessageAnswer) {
@@ -328,16 +325,21 @@
   justify-content: center;
   gap: 0.5rem;
   flex-wrap: nowrap;
+  font-weight: 500;
   padding: 0.5rem;
-  border-radius: 4px;
+  border-radius: 0.375rem;
   border: 1px solid var(--markprompt-border);
-  background-color: var(--markprompt-muted);
-  color: var(--markprompt-mutedForeground);
+  background-color: var(--markprompt-background);
+  color: var(--markprompt-foreground);
   cursor: pointer;
   white-space: nowrap;
   transform: translateY(-100%);
-  top: -0.5rem;
-  right: 0.25rem;
+  top: -1rem;
+  right: 1rem;
+}
+
+:where(.MarkpromptRegenerateButton:hover) {
+  background-color: var(--markprompt-muted);
 }
 
 :where(.MarkpromptPromptLabel) {
@@ -351,7 +353,7 @@
 }
 
 :where(.MarkpromptMessagePrompt) {
-  padding-inline: 1.25rem;
+  padding-inline: 1rem;
   background-color: var(--markprompt-muted);
   border-top: 1px solid var(--markprompt-border);
   border-bottom: 1px solid var(--markprompt-border);
@@ -362,6 +364,10 @@
 
 :where(.MarkpromptMessagePrompt:first-of-type) {
   border-top-color: transparent;
+}
+
+:where(.MarkpromptMessagePromptText) {
+  font-size: var(--markprompt-text-size);
 }
 
 :where(.MarkpromptPrimaryIcon) {
@@ -445,7 +451,7 @@
   overflow: hidden;
 
   /* allow the answer container in the chat view to scroll past the floating input */
-  padding-bottom: 4rem;
+  padding-bottom: 6rem;
 }
 
 :where(.MarkpromptAutoScroller) {
@@ -869,7 +875,7 @@
 }
 
 :where(.MarkpromptMessageAnswer .MarkpromptAnswer) {
-  padding-right: 0.75rem;
+  padding: 0 1rem;
 }
 
 :where(.MarkpromptCaret) {
@@ -924,19 +930,19 @@
 
 :where(.MarkpromptPromptFeedback div) {
   display: flex;
-  gap: 0.5rem;
+  gap: 0.375rem;
 }
 
 :where(.MarkpromptPromptFeedback button) {
   cursor: pointer;
   color: var(--markprompt-foreground);
   border: 1px solid var(--markprompt-border);
-  background-color: var(--markprompt-muted);
+  background-color: var(--markprompt-background);
   font-weight: 600;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0.375rem 0.5rem;
+  padding: 0.375rem;
   border-radius: 0.375rem;
   animation-name: markprompt-slide-up;
   animation-duration: 1s;
@@ -955,7 +961,7 @@
 }
 
 .MarkpromptPromptFeedback button:hover {
-  opacity: 0.7;
+  background-color: var(--markprompt-muted);
 }
 
 :where(.MarkpromptProgress) {
