--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -30,7 +30,7 @@
     --markprompt-background: #050505;
     --markprompt-foreground: #d4d4d4;
     --markprompt-muted: #171717;
-    --markprompt-mutedForeground: #737373;
+    --markprompt-mutedForeground: #808080;
     --markprompt-border: #262626;
     --markprompt-input: #fff;
     --markprompt-primary: #6366f1;
@@ -50,7 +50,7 @@
   --markprompt-background: #050505;
   --markprompt-foreground: #d4d4d4;
   --markprompt-muted: #171717;
-  --markprompt-mutedForeground: #737373;
+  --markprompt-mutedForeground: #808080;
   --markprompt-border: #262626;
   --markprompt-input: #fff;
   --markprompt-primary: #6366f1;
@@ -294,10 +294,6 @@
   border-bottom: 1px solid var(--markprompt-border);
   padding: 0 1rem 0 0.75rem;
   gap: 0.75rem;
-}
-
-:where(.MarkpromptPromptView .MarkpromptForm) {
-  margin-bottom: 1rem;
 }
 
 :where(.MarkpromptChatView .MarkpromptForm) {
@@ -1015,9 +1011,9 @@
   padding-bottom: 0.5rem;
   background-color: var(--markprompt-muted);
   border-top: 1px solid var(--markprompt-border);
-  font-size: 0.75rem;
+  font-size: 0.875rem;
   color: var(--markprompt-mutedForeground);
-  overflow: auto;
+  overflow: hidden;
   flex: 0 0 auto;
   transition-property: opacity, transform;
   transition-duration: 200ms;
@@ -1035,9 +1031,8 @@
 }
 
 :where(.MarkpromptPromptView .MarkpromptReferences p) {
-  padding-left: 2rem;
-  padding-right: 2rem;
-  padding-top: 0;
+  padding-inline: 2rem;
+  margin-top: 0;
 }
 
 :where(.MarkpromptReferences[data-loading-state='preload']) {
