--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -909,6 +909,7 @@
 :where(.MarkpromptPromptFeedback[data-variant='icons']) {
   padding: 0.75rem 0;
   margin-right: 1rem;
+  align-self: last baseline;
 }
 
 :where(.MarkpromptPromptFeedback[data-variant='text'] h3) {
