--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -19,6 +19,9 @@
   --markprompt-text-size-xs: 0.75rem;
   --markprompt-button-icon-size: 1rem;
   --markprompt-icon-stroke-width: 2px;
+  --markprompt-shadow: 0 1px 2px 0 #0000000d;
+  --markprompt-ring-shadow: 0 0 #0000;
+  --markprompt-ring-offset-shadow: 0 0 #0000;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -27,7 +30,7 @@
     --markprompt-background: #050505;
     --markprompt-foreground: #d4d4d4;
     --markprompt-muted: #171717;
-    --markprompt-mutedForeground: #737373;
+    --markprompt-mutedForeground: #808080;
     --markprompt-border: #262626;
     --markprompt-input: #fff;
     --markprompt-primary: #6366f1;
@@ -47,7 +50,7 @@
   --markprompt-background: #050505;
   --markprompt-foreground: #d4d4d4;
   --markprompt-muted: #171717;
-  --markprompt-mutedForeground: #737373;
+  --markprompt-mutedForeground: #808080;
   --markprompt-border: #262626;
   --markprompt-input: #fff;
   --markprompt-primary: #6366f1;
@@ -293,21 +296,11 @@
   gap: 0.75rem;
 }
 
-:where(.MarkpromptPromptView .MarkpromptForm) {
-  margin-bottom: 1rem;
-}
-
 :where(.MarkpromptChatView .MarkpromptForm) {
-  position: absolute;
-  bottom: 0.75rem;
-  left: 1.25rem;
-  right: 1.25rem;
-  border: 1px solid var(--markprompt-border);
+  position: relative;
+  border-top: 1px solid var(--markprompt-border);
+  border-bottom: 0;
   background-color: var(--markprompt-background);
-  border-radius: 0.5rem;
-  box-shadow:
-    hsl(206deg 22% 7% / 35%) 0 10px 40px -10px,
-    hsl(206deg 22% 7% / 20%) 0 10px 20px -15px;
 }
 
 :where(.MarkpromptMessageAnswerContainer) {
@@ -315,7 +308,6 @@
   grid-template-columns: 1fr auto;
   align-items: first baseline;
   max-width: 100%;
-  padding-right: 0.75rem;
 }
 
 :where(.MarkpromptMessageAnswer) {
@@ -327,17 +319,28 @@
   display: flex;
   justify-content: center;
   gap: 0.5rem;
+  transform: translateY(-100%);
+  top: -1rem;
+  right: 1rem;
   flex-wrap: nowrap;
-  padding: 0.5rem;
-  border-radius: 4px;
+  font-weight: 500;
+  padding: 0.5rem 1rem;
+  border-radius: 0.375rem;
   border: 1px solid var(--markprompt-border);
-  background-color: var(--markprompt-muted);
-  color: var(--markprompt-mutedForeground);
+  background-color: var(--markprompt-background);
+  color: var(--markprompt-foreground);
   cursor: pointer;
   white-space: nowrap;
-  transform: translateY(-100%);
-  top: -0.5rem;
-  right: 0.25rem;
+  box-shadow: var(--markprompt-ring-offset-shadow, 0 0 #0000),
+    var(--markprompt-ring-shadow, 0 0 #0000), var(--markprompt-shadow);
+  transition-property: color, background-color, border-color,
+    text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 0.15s;
+}
+
+:where(.MarkpromptRegenerateButton:hover) {
+  background-color: var(--markprompt-muted);
 }
 
 :where(.MarkpromptPromptLabel) {
@@ -351,17 +354,23 @@
 }
 
 :where(.MarkpromptMessagePrompt) {
-  padding-inline: 1.25rem;
+  padding-inline: 1.5rem;
   background-color: var(--markprompt-muted);
   border-top: 1px solid var(--markprompt-border);
   border-bottom: 1px solid var(--markprompt-border);
   position: relative;
   overflow: hidden;
-  margin-bottom: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
 }
 
-:where(.MarkpromptMessagePrompt:first-of-type) {
+:where(.MarkpromptAutoScroller section:first-of-type .MarkpromptMessagePrompt) {
   border-top-color: transparent;
+  margin-top: 0;
+}
+
+:where(.MarkpromptMessagePromptText) {
+  font-size: var(--markprompt-text-size);
 }
 
 :where(.MarkpromptPrimaryIcon) {
@@ -443,9 +452,6 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-
-  /* allow the answer container in the chat view to scroll past the floating input */
-  padding-bottom: 4rem;
 }
 
 :where(.MarkpromptAutoScroller) {
@@ -455,6 +461,7 @@
   scrollbar-width: none;
   overflow-x: hidden;
   overflow-y: auto;
+  padding-bottom: 3rem;
 }
 
 :where(.MarkpromptAutoScroller::-webkit-scrollbar) {
@@ -869,7 +876,7 @@
 }
 
 :where(.MarkpromptMessageAnswer .MarkpromptAnswer) {
-  padding-right: 0.75rem;
+  padding: 0 1.5rem;
 }
 
 :where(.MarkpromptCaret) {
@@ -901,6 +908,8 @@
 
 :where(.MarkpromptPromptFeedback[data-variant='icons']) {
   padding: 0.75rem 0;
+  margin-right: 1rem;
+  align-self: last baseline;
 }
 
 :where(.MarkpromptPromptFeedback[data-variant='text'] h3) {
@@ -924,30 +933,40 @@
 
 :where(.MarkpromptPromptFeedback div) {
   display: flex;
-  gap: 0.5rem;
+  gap: 0.375rem;
 }
 
 :where(.MarkpromptPromptFeedback button) {
   cursor: pointer;
-  color: var(--markprompt-foreground);
-  border: 1px solid var(--markprompt-border);
-  background-color: var(--markprompt-muted);
-  font-weight: 600;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0.375rem 0.5rem;
+  padding: 0.375rem;
   border-radius: 0.375rem;
   animation-name: markprompt-slide-up;
   animation-duration: 1s;
   animation-fill-mode: backwards;
   transition-timing-function: ease-in-out;
+  color: var(--markprompt-mutedForeground);
+  background-color: transparent;
+}
+
+:where(.MarkpromptPromptFeedback[data-variant='icons'] button) {
+  border: 0;
+}
+
+:where(.MarkpromptPromptFeedback[data-variant='text'] button) {
+  border: 1px solid var(--markprompt-border);
 }
 
 :where(.MarkpromptPromptFeedback button[data-active='true']) {
   background-color: var(--markprompt-primary);
   color: var(--markprompt-primaryForeground);
-  border: 1px solid var(--markprompt-primary);
+  border-color: var(--markprompt-primaryForeground);
+}
+
+.MarkpromptPromptFeedback button[data-active='true']:hover {
+  background-color: var(--markprompt-primary);
 }
 
 :where(.MarkpromptPromptFeedback button svg) {
@@ -955,7 +974,7 @@
 }
 
 .MarkpromptPromptFeedback button:hover {
-  opacity: 0.7;
+  background-color: var(--markprompt-muted);
 }
 
 :where(.MarkpromptProgress) {
@@ -993,9 +1012,9 @@
   padding-bottom: 0.5rem;
   background-color: var(--markprompt-muted);
   border-top: 1px solid var(--markprompt-border);
-  font-size: 0.75rem;
+  font-size: 0.875rem;
   color: var(--markprompt-mutedForeground);
-  overflow: auto;
+  overflow: hidden;
   flex: 0 0 auto;
   transition-property: opacity, transform;
   transition-duration: 200ms;
@@ -1012,16 +1031,25 @@
   padding-block: 0 1.5rem;
 }
 
+:where(.MarkpromptPromptView .MarkpromptReferences p) {
+  padding-inline: 2rem;
+  margin-top: 0;
+}
+
 :where(.MarkpromptReferences[data-loading-state='preload']) {
   overflow-x: hidden;
 }
 
-:where(.MarkpromptReferences p) {
+:where(.MarkpromptChatView .MarkpromptReferences p) {
   animation: markprompt-fade-in 500ms ease-out forwards 1;
   font-weight: 600;
   margin: 0;
-  padding-inline: 2rem;
   margin-bottom: 0.5rem;
+  padding-inline: 2rem;
+}
+
+.MarkpromptChatView .MarkpromptReferences p {
+  padding-inline: 1.5rem;
 }
 
 :where(.MarkpromptReferences ul) {
@@ -1033,18 +1061,22 @@
   flex-flow: row nowrap;
   align-items: center;
   gap: 0.5rem;
-  padding: 0.25rem 2rem 0.5rem;
   margin-top: -0.25rem;
   list-style-type: none;
   margin-bottom: 0;
   overflow-x: scroll;
   scrollbar-width: none;
   -ms-overflow-style: none;
+}
+
+:where(.MarkpromptPromptView .MarkpromptReferences ul) {
+  padding: 0.25rem 2rem 0.5rem;
   background-color: var(--markprompt-muted);
 }
 
 :where(.MarkpromptChatView .MarkpromptReferences ul) {
   background-color: unset;
+  padding: 0.25rem 1.5rem 0.5rem;
 }
 
 .MarkpromptReferences ul::-webkit-scrollbar {
@@ -1057,7 +1089,7 @@
   position: absolute;
   top: 3px;
   bottom: 0;
-  width: 2rem;
+  width: 1rem;
   pointer-events: none;
 }
 
@@ -1108,16 +1140,12 @@
 }
 
 :where(.MarkpromptCancelled) {
-  padding-inline: 1rem;
+  padding-inline: 1.5rem;
 }
 
 :where(.MarkpromptCancelledText) {
-  background-color: var(--markprompt-muted);
-  padding: 0.5rem 1rem;
-  border-radius: 0.5rem;
-  font-size: 0.875rem;
+  font-size: var(--markprompt-text-size-xs);
   color: var(--markprompt-mutedForeground);
-  text-wrap: balance;
 }
 
 :where(.MarkpromptBackButton) {
