--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -315,13 +315,9 @@
 }
 
 :where(.MarkpromptRegenerateButton) {
-  position: absolute;
   display: flex;
   justify-content: center;
   gap: 0.5rem;
-  transform: translateY(-100%);
-  top: -1rem;
-  right: 1rem;
   flex-wrap: nowrap;
   font-weight: 500;
   padding: 0.5rem 1rem;
@@ -1427,6 +1423,90 @@
 :where(.MarkpromptNoSearchResults span) {
   color: var(--markprompt-foreground);
   font-weight: 600;
+}
+
+:where(.MarkpromptChatActions) {
+  display: flex;
+  gap: 0.25rem;
+  position: absolute;
+  top: -1rem;
+  right: 1.25rem;
+  transform: translateY(-100%);
+}
+
+:where(.MarkpromptNewChatIcon) {
+  width: 1.25em;
+  height: 1.25em;
+  color: var(--markprompt-mutedForeground);
+}
+
+:where(.MarkpromptSelect) {
+  position: relative;
+}
+
+:where(.MarkpromptSelectToggle) {
+  all: unset;
+  padding: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--markprompt-border);
+  border-radius: 0.375rem;
+  color: var(--markprompt-mutedForeground);
+  cursor: pointer;
+  box-shadow: var(--markprompt-ring-offset-shadow, 0 0 #0000),
+    var(--markprompt-ring-shadow, 0 0 #0000), var(--markprompt-shadow);
+}
+
+:where(.MarkpromptSelectToggle:hover) {
+  background-color: var(--markprompt-muted);
+}
+
+:where(.MarkpromptSelectMenu) {
+  display: none;
+  background-color: var(--markprompt-background);
+  border: 1px solid var(--markprompt-border);
+  border-radius: 0.375rem;
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+  transition-timing-function: ease-in-out;
+  list-style-type: none;
+  padding-left: 0;
+  will-change: auto;
+  z-index: 1;
+  box-shadow: var(--markprompt-ring-offset-shadow, 0 0 #0000),
+    var(--markprompt-ring-shadow, 0 0 #0000), var(--markprompt-shadow);
+  max-width: 30ch;
+}
+
+:where(.MarkpromptSelectMenu[data-open='true']) {
+  display: block;
+}
+
+:where(.MarkpromptSelectMenu li) {
+  margin-left: 0;
+  white-space: nowrap;
+  font-size: 0.875rem;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+}
+
+:where(.MarkpromptSelectMenu li[data-highlighted='true']) {
+  background-color: var(--markprompt-muted);
+}
+
+:where(.MarkpromptSelectMenu li[data-selected='true']) {
+  font-weight: 600;
+}
+
+:where(.MarkpromptNewChatOption) {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
 }
 
 @keyframes markprompt-show-content {
