--- a/examples/with-standalone-chat/src/style.css
+++ b/examples/with-standalone-chat/src/style.css
@@ -1,97 +1,53 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+html {
+  box-sizing: border-box;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-family: sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--markprompt-text);
+  background-color: var(--markprompt-background);
 }
 
 #app {
-  max-width: 1280px;
+  display: grid;
+  gap: 1.5rem;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  justify-items: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #3178c6aa);
+#app > aside {
+  padding-top: 1.5rem;
 }
 
-.card {
-  padding: 2em;
+#markprompt-chat {
+  border: 1px solid var(--markprompt-border);
+  margin-inline: 0.75rem;
+  margin-bottom: 1.5rem;
+  height: calc(100dvh - 1.5rem);
+  justify-self: stretch;
 }
 
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@media screen and (pointer: fine) {
+  #app {
+    grid-template-columns: auto 1fr;
+    gap: 2rem;
+    height: 100dvh;
+    padding: 0 2rem;
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+
+  #markprompt-chat {
+    border: 1px solid var(--markprompt-border);
+    height: calc(100dvh - 3.5rem);
+    margin-block: 1.75rem;
+    margin-inline: 0;
   }
 }
