--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -249,10 +249,100 @@
 }
 
 :where(.MarkpromptChatView) {
+  container-name: chat;
+  container-type: inline-size;
   display: grid;
-  grid-template-rows: 1fr;
+  grid-template-columns: 18rem 1fr;
   height: 100%;
   position: relative;
+}
+
+:where(.MarkpromptChatViewSidebar) {
+  display: none;
+  border-right: 1px solid var(--markprompt-border);
+}
+
+:where(.MarkpromptChatViewSidebarTitle) {
+  border-bottom: 1px solid var(--markprompt-border);
+  font-size: var(--markprompt-text-size);
+  margin: 0;
+  padding: 1em 0.75rem;
+}
+
+:where(.MarkpromptChatViewChat) {
+  overflow: hidden;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  grid-column: span 2;
+}
+
+@container (width > 50rem) {
+  :where(.MarkpromptChatView) {
+    grid-template-columns: 18rem 1fr;
+  }
+
+  :where(.MarkpromptChatViewSidebar) {
+    display: grid;
+    grid-column: 1;
+    grid-template-rows: auto 1fr;
+    height: 100%;
+  }
+
+  :where(.MarkpromptChatViewChat) {
+    grid-column: 2;
+  }
+
+  :where(.MarkpromptConversationSelect) {
+    display: none;
+  }
+}
+
+:where(.MarkpromptChatConversationList) {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-auto-flow: row;
+  grid-auto-rows: min-content;
+  overflow-y: auto;
+  gap: 0.5rem;
+  padding: 0.5rem;
+}
+
+:where(.MarkpromptChatConversationList li) {
+}
+
+:where(.MarkpromptChatConversationList button) {
+  all: unset;
+  display: block;
+  padding-inline: 0.75rem 0.25rem;
+  padding-block: 0.75rem;
+  font-size: var(--markprompt-text-size);
+  cursor: pointer;
+  border-radius: 0.25rem;
+  border: 1px solid transparent;
+  width: 100%;
+}
+
+:where(.MarkpromptChatConversationList p) {
+  margin: 0;
+}
+
+:where(.MarkpromptChatConversationList p:first-of-type) {
+  margin: 0;
+}
+
+:where(.MarkpromptChatConversationList p:last-of-type) {
+  color: var(--markprompt-mutedForeground);
+}
+
+:where(.MarkpromptChatConversationList button:hover),
+:where(.MarkpromptChatConversationList [data-selected='true'] button) {
+  background-color: var(--markprompt-muted);
+}
+
+:where(.MarkpromptChatConversationList [data-selected='true'] button) {
+  border-color: var(--markprompt-border);
 }
 
 :where(.MarkpromptClose) {
@@ -361,7 +451,7 @@
 }
 
 :where(.MarkpromptAutoScroller section:first-of-type .MarkpromptMessagePrompt) {
-  border-top-color: transparent;
+  border-top: none;
   margin-top: 0;
 }
 
@@ -1449,6 +1539,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: var(--markprompt-background);
   border: 1px solid var(--markprompt-border);
   border-radius: 0.375rem;
   color: var(--markprompt-mutedForeground);
