invert logo on dark color schemes

--- a/examples/with-standalone-chat/src/style.css
+++ b/examples/with-standalone-chat/src/style.css
@@ -51,3 +51,9 @@ body {
     margin-inline: 0;
   }
 }
+
+@media screen and (prefers-color-scheme: dark) {
+  #app > aside img {
+    filter: invert(1);
+  }
+}
