Add chat history (#175)
* Minor UI adjustments

* More UI additions

* Updated cancelled message

* Remove stream separator check on /v1/chat streaming responses

* Only one class needed

* Restore with-markprompt-web init

* Remove submitPrompt

* Remove shared constants.ts

* Update README.md

* Fix inconsistency

* Update @markprompt/react

* Add changesets

* Add support for conversationId

* Fix test suite

* Add changeset

* Update core docs

* Start work on chat history

* Save and restore chat history

* Move logic to zustand store and start work on UI

* Normalize the store, add Select

* Fix z-index

* Export standalone chat view from @markprompt/web

* Add chat history sidebar

* Color theme fixes

* invert logo on dark color schemes

* Update package-lock.json

* throw on missing projectKey

* Work on tests

* Update test

* green

* Add utils test

* Update constants tests

* Add references test

* Improve coverage for ChatView and chat store

* Remove unused import

* Slower chunks

* Move onFeedbackSubmit up

* whitespace

* linting

* Cover ConditionalWrap

* Improve ConditionalWrap and headless tests

* Improve SearchView coverage

* Linting and test fail

* Add tests for the Markprompt component

* Add changesets

* Update README's

* Update changeset

---------

Co-authored-by: Michael Fester <michael.fester@gmail.com>

--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -249,10 +249,98 @@
 }
 
 :where(.MarkpromptChatView) {
+  container-name: chat;
+  container-type: inline-size;
   display: grid;
-  grid-template-rows: 1fr;
+  grid-template-columns: 18rem 1fr;
   height: 100%;
   position: relative;
+}
+
+:where(.MarkpromptChatViewSidebar) {
+  display: none;
+  border-right: 1px solid var(--markprompt-border);
+}
+
+:where(.MarkpromptChatViewChat) {
+  overflow: hidden;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  grid-column: span 2;
+}
+
+@container (width > 50rem) {
+  :where(.MarkpromptChatView) {
+    grid-template-columns: 18rem 1fr;
+  }
+
+  :where(.MarkpromptChatViewSidebar) {
+    display: grid;
+    grid-column: 1;
+    grid-template-rows: auto 1fr;
+    height: 100%;
+  }
+
+  :where(.MarkpromptChatViewChat) {
+    grid-column: 2;
+  }
+
+  :where(.MarkpromptConversationSelect) {
+    display: none;
+  }
+}
+
+:where(.MarkpromptChatViewSidebarTitle) {
+  border-bottom: 1px solid var(--markprompt-border);
+  font-size: var(--markprompt-text-size);
+  margin: 0;
+  padding: 1em 0.75rem;
+  color: var(--markprompt-foreground);
+}
+
+:where(.MarkpromptChatConversationList) {
+  list-style-type: none;
+  margin: 0;
+  padding: 0.5rem;
+  display: grid;
+  grid-auto-flow: row;
+  grid-auto-rows: min-content;
+  overflow-y: auto;
+  gap: 0.5rem;
+}
+
+:where(.MarkpromptChatConversationList button) {
+  all: unset;
+  display: block;
+  padding-inline: 0.75rem 0.25rem;
+  padding-block: 0.75rem;
+  font-size: var(--markprompt-text-size);
+  cursor: pointer;
+  border-radius: 0.25rem;
+  border: 1px solid transparent;
+  width: 100%;
+}
+
+:where(.MarkpromptChatConversationList p) {
+  margin: 0;
+}
+
+:where(.MarkpromptChatConversationList p:first-of-type) {
+  margin: 0;
+  color: var(--markprompt-foreground);
+}
+
+:where(.MarkpromptChatConversationList p:last-of-type) {
+  color: var(--markprompt-mutedForeground);
+}
+
+:where(.MarkpromptChatConversationList button:hover),
+:where(.MarkpromptChatConversationList [data-selected='true'] button) {
+  background-color: var(--markprompt-muted);
+}
+
+:where(.MarkpromptChatConversationList [data-selected='true'] button) {
+  border-color: var(--markprompt-border);
 }
 
 :where(.MarkpromptClose) {
@@ -315,13 +403,9 @@
 }
 
 :where(.MarkpromptRegenerateButton) {
-  position: absolute;
   display: flex;
   justify-content: center;
   gap: 0.5rem;
-  transform: translateY(-100%);
-  top: -1rem;
-  right: 1rem;
   flex-wrap: nowrap;
   font-weight: 500;
   padding: 0.5rem 1rem;
@@ -365,12 +449,13 @@
 }
 
 :where(.MarkpromptAutoScroller section:first-of-type .MarkpromptMessagePrompt) {
-  border-top-color: transparent;
+  border-top: none;
   margin-top: 0;
 }
 
 :where(.MarkpromptMessagePromptText) {
   font-size: var(--markprompt-text-size);
+  color: var(--markprompt-foreground);
 }
 
 :where(.MarkpromptPrimaryIcon) {
@@ -1098,10 +1183,10 @@
   bottom: 0;
   width: 1rem;
   pointer-events: none;
+  z-index: 1;
 }
 
 .MarkpromptReferences::before {
-  z-index: 10;
   left: 0;
   background-image: linear-gradient(
     to right,
@@ -1111,7 +1196,6 @@
 }
 
 .MarkpromptReferences::after {
-  z-index: 10;
   right: 0;
   background-image: linear-gradient(
     to left,
@@ -1427,6 +1511,88 @@
 :where(.MarkpromptNoSearchResults span) {
   color: var(--markprompt-foreground);
   font-weight: 600;
+}
+
+:where(.MarkpromptChatActions) {
+  display: flex;
+  gap: 0.25rem;
+  position: absolute;
+  top: -1rem;
+  right: 1.25rem;
+  transform: translateY(-100%);
+}
+
+:where(.MarkpromptNewChatIcon) {
+  width: 1.25em;
+  height: 1.25em;
+  color: var(--markprompt-mutedForeground);
+}
+
+:where(.MarkpromptSelect) {
+  position: relative;
+}
+
+:where(.MarkpromptSelectToggle) {
+  all: unset;
+  padding: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--markprompt-background);
+  border: 1px solid var(--markprompt-border);
+  border-radius: 0.375rem;
+  color: var(--markprompt-mutedForeground);
+  cursor: pointer;
+  box-shadow: var(--markprompt-ring-offset-shadow, 0 0 #0000),
+    var(--markprompt-ring-shadow, 0 0 #0000), var(--markprompt-shadow);
+}
+
+:where(.MarkpromptSelectToggle:hover) {
+  background-color: var(--markprompt-muted);
+}
+
+:where(.MarkpromptSelectMenu) {
+  display: none;
+  background-color: var(--markprompt-background);
+  border: 1px solid var(--markprompt-border);
+  border-radius: 0.375rem;
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+  list-style-type: none;
+  padding-left: 0;
+  z-index: 2;
+  box-shadow: var(--markprompt-ring-offset-shadow, 0 0 #0000),
+    var(--markprompt-ring-shadow, 0 0 #0000), var(--markprompt-shadow);
+  max-width: 30ch;
+}
+
+:where(.MarkpromptSelectMenu[data-open='true']) {
+  display: block;
+}
+
+:where(.MarkpromptSelectMenu li) {
+  margin-left: 0;
+  font-size: 0.875rem;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+}
+
+:where(.MarkpromptSelectMenu li[data-highlighted='true']) {
+  background-color: var(--markprompt-muted);
+}
+
+:where(.MarkpromptSelectMenu li[data-selected='true']) {
+  font-weight: 600;
+}
+
+:where(.MarkpromptNewChatOption) {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
 }
 
 @keyframes markprompt-show-content {
