--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -1029,7 +1029,7 @@
   gap: 0.375rem;
 }
 
-:where(.MarkpromptPromptFeedback button) {
+:where(.MarkpromptPromptFeedback button), :where(.MarkpromptCopyButton) {
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -1068,6 +1068,17 @@
 
 .MarkpromptPromptFeedback button:hover {
   background-color: var(--markprompt-muted);
+}
+
+:where(.MarkpromptCopyButton) {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  border: 0;
+}
+
+:where(.MarkpromptCopyButton):hover {
+  opacity: 0.8;
 }
 
 :where(.MarkpromptProgress) {
