--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -86,6 +86,7 @@
 
 :where(.MarkpromptFloatingTrigger) {
   display: flex;
+  align-items: center;
   cursor: pointer;
   border-radius: 99999px;
   color: var(--markprompt-primaryForeground);
@@ -95,12 +96,18 @@
   bottom: 2rem;
   right: 2rem;
   stroke-width: var(--markprompt-icon-stroke-width);
-  transition-property: opacity;
-  transition-duration: 200ms;
+  gap: 0.75rem;
+  transition: all 200ms;
 }
 
 :where(.MarkpromptFloatingTrigger:hover) {
-  opacity: 0.8;
+  opacity: 0.85;
+  transform: scale(1.02);
+}
+
+:where(.MarkpromptFloatingTrigger span) {
+  font-weight: 600;
+  margin-left: 0.25rem;
 }
 
 :where(.MarkpromptSearchBoxTrigger) {
