--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -22,6 +22,8 @@
   --markprompt-shadow: 0 1px 2px 0 #0000000d;
   --markprompt-ring-shadow: 0 0 #0000;
   --markprompt-ring-offset-shadow: 0 0 #0000;
+  --markprompt-error-background: #fef2f2;
+  --markprompt-error-foreground: #991b1b;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -42,6 +44,8 @@
     --markprompt-secondaryHighlight: #a855f7;
     --markprompt-overlay: #00000040;
     --markprompt-ring: #fff;
+    --markprompt-error-background: #450a0a;
+    --markprompt-error-foreground: #fecaca;
   }
 }
 
@@ -385,17 +389,30 @@
 :where(.MarkpromptForm) {
   display: flex;
   flex: 1 1 auto;
-  align-items: center;
-  border-bottom: 1px solid var(--markprompt-border);
-  padding: 0 1rem 0 0.75rem;
-  gap: 0.75rem;
+  flex-direction: column;
 }
 
 :where(.MarkpromptChatView .MarkpromptForm) {
   position: relative;
-  border-top: 1px solid var(--markprompt-border);
-  border-bottom: 0;
   background-color: var(--markprompt-background);
+  flex-direction: column-reverse;
+  align-items: stretch;
+}
+
+:where(.MarkpromptPromptWrapper) {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+  padding: 0 0.75rem;
+}
+
+:where(.MarkpromptChatView .MarkpromptPromptWrapper) {
+  border-top: 1px solid var(--markprompt-border);
+}
+
+:where(.MarkpromptPromptView .MarkpromptPromptWrapper),
+:where(.MarkpromptSearchView .MarkpromptPromptWrapper) {
+  border-bottom: 1px solid var(--markprompt-border);
 }
 
 :where(.MarkpromptMessageAnswerContainer) {
@@ -1555,10 +1572,9 @@
 :where(.MarkpromptChatActions) {
   display: flex;
   gap: 0.25rem;
-  position: absolute;
-  top: -1rem;
-  right: 1.25rem;
-  transform: translateY(-100%);
+  margin-bottom: 0.75rem;
+  margin-right: 0.75rem;
+  align-self: flex-end;
 }
 
 :where(.MarkpromptNewChatIcon) {
@@ -1680,6 +1696,22 @@
 
 :where(.MarkpromptDefaultViewMessagePromptsContainer a:hover) {
   opacity: 0.8;
+}
+
+:where(.MarkpromptErrorMessage) {
+  padding-inline: 1.5rem;
+  padding-block: 0.75rem;
+  font-size: var(--markprompt-text-size);
+  color: var(--markprompt-foreground);
+  background: var(--markprompt-error-background);
+  border-top: var(--markprompt-error-foreground);
+  color: var(--markprompt-error-foreground);
+}
+
+:where(.MarkpromptErrorMessage p) {
+  margin: 0;
+  font-weight: 500;
+  text-wrap: pretty;
 }
 
 @keyframes markprompt-show-content {
