--- a/examples/with-tools-calling/pages/global.css
+++ b/examples/with-tools-calling/pages/global.css
@@ -94,13 +94,12 @@ body,
 .Container {
   width: 100%;
   max-width: 600px;
-  margin: 0px auto;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 2rem;
   justify-items: center;
-  width: 100%;
   padding-top: 100px;
   font-size: 0.875rem;
 }
